qwen fixes
